Add Github buttons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         }
     </style>
 
+    <div style="position: absolute; right: 10px; bottom: 10px;">
+        <a class="github-button" href="http://github.com/adtac" data-count-href="/adtac/followers" data-count-api="/users/adtac#followers" data-count-aria-label="# followers on GitHub" data-style="mega" aria-label="Follow @adtac on GitHub">Follow @adtac</a>
+        <a class="github-button" href="http://github.com/adtac/lost-in-translation" data-count-href="/adtac/lost-in-translation/stargazers" data-count-api="/repos/adtac/lost-in-translation#stargazers_count" data-count-aria-label="# stargazers on GitHub" data-style="mega" aria-label="Star adtac/lost-in-translation on GitHub">Star</a>
+    </div>
+
     <div style="position: absolute; left: 24px; top: 60px; font-family: 'Open Sans'; font-weight: 100px; font-size: 32px;">
         Lost in Translation
     </div>
@@ -52,4 +57,5 @@
             </tr>
         </table>
     </div>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </html>
